Adicionando um arquivo README ao projeto e trocando os nomes dos vídeos sugeridos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="video-sugerido-1"></div>
         <div class="infos-video-sugerido">
             <h1>Um Título de vídeo grande</h1>
-            <p>Roberto Dias</p>
+            <p>Thales Gomes</p>
             <p>23 mil visualizações</p>
             <p>há 3 semanas</p>
         </div>
@@ -29,7 +29,7 @@
         <div class="video-sugerido-2"></div>
         <div class="infos-video-sugerido">
             <h1>Um Título de vídeo grande</h1>
-            <p>Roberto Dias</p>
+            <p>Thales Gomes</p>
             <p>23 mil visualizações</p>
             <p>há 3 semanas</p>
         </div>
@@ -37,7 +37,7 @@
         <div class="video-sugerido-3"></div>
         <div class="infos-video-sugerido">
             <h1>Um Título de vídeo grande</h1>
-            <p>Roberto Dias</p>
+            <p>Thales Gomes</p>
             <p>23 mil visualizações</p>
             <p>há 3 semanas</p>
         </div>
